# marte-compiler

./: .gitlab-ci.yml  Dockerfile  MANIFEST.in  README.md  install.sh  pyproject.toml  settings.yml
.github/workflows/: test-and-lint.yml
docs/source/: debugging.rst  index.rst  install.rst  usage.rst
martecompiler/: __main__.py  server.py
tests/: test_server.py
